fix: github link on safari

--- a/website/app/style.css
+++ b/website/app/style.css
@@ -75,6 +75,7 @@ body {
 .github-link span {
   display: inline-flex;
   align-items: center;
+  flex-shrink: 0;
   gap: 0.2em;
 }
 
